# pydantic-marc

./: .gitignore  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: pymarc-tests.yaml  unit-tests.yaml
docs/: changelog.md  index.md
docs/api/: error_handlers.md  errors.md  fields.md  marc_rules.md  models.md  utils.md  validators.md
pydantic_marc/: __init__.py  components.py  constants.py  error_handlers.py  errors.py  field_validators.py  fields.py  marc_rules.py  models.py  record_validators.py  rules.py  utils.py  validators.py
pydantic_marc/validation_rules/: country_codes.json  default_rules.json  language_codes.json  marc_codes.json
tests/: conftest.py  test_errors.py  test_fields.py  test_marc_rules.py  test_models.py  test_pymarc_backwards_compatibility.py  test_rules.py  test_validators.py
tests/unit/: conftest.py  test_errors.py  test_fields.py  test_models.py
