[project]
name = "pydantic-marc"
version = "0.2.0"
description = "A data validation tool for MARC records"
authors = [
    {name = "Charlotte Kostelic",email = "charlottekostelic@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/*"]

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pymarc = "^5.2.3"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mike = "^2.1.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pydantic_marc"

[tool.ruff.lint]
select = ["D", "E", "W"]
ignore = ["D417"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]